--- a/src/main/resources/templates/index3_qlhd.html
+++ b/src/main/resources/templates/index3_qlhd.html
@@ -910,7 +910,7 @@
                 alert('Ngày bắt đầu phải nhỏ hơn ngày kết thúc.');
                 return;
             }
-            const monthlyRent = $('#editMonthlyRent').val();
+            const monthlyRent = $('#editMonthlyRentpit ').val();
             // Validate if monthlyRent is greater than 0
             if (parseFloat(monthlyRent) <= 0) {
                 alert('Tiền thuê phải lớn hơn 0.');
